--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -1,5 +1,14 @@
 
 .blog-content{
+    max-width: 75ch;
+
+    li{
+        &::before{
+            content: '-';
+            margin-right: 16px;
+        }
+    }
+
 	h1,h2,h3,h4,h5,h6{
 		margin-bottom: 0.75rem;
 	}
@@ -9,13 +18,14 @@
 	}
 	
 	pre{
+        overflow: auto;
 		background-color: var(--color-surface-neutral-dim) !important;
 		padding: 24px;
 	}
 
     code:not(pre > code) {
         width: fit-content;
-        padding: 4px;
+        padding: 2px 8px;
         border-radius: var(--radius-sm);
         color: var(--color-text-neutral);
         background-color: var(--color-surface-neutral-dim);
